# pyvaluate

./: .flake8  README.md  pyproject.toml
pyvaluate/: main.py
templates/: cowsay.html  edit_cowsay.html  index.html
