[tool.poetry]
name = "pyvaluate"
version = "0.1.0"
description = ""
authors = ["Zackery Ayscue"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
jinja2 = "^3.1.2"
uvicorn = "^0.23.2"
mangum = "^0.17.0"
kink = "^0.7.0"
cowsay = "^6.1"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
